--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "chromedriver": "^131.0.4",
+    "edgedriver": "^6.1.1",
+    "geckodriver": "^5.0.0",
     "rxjs": "~7.5.0",
+    "selenium-webdriver": "^4.27.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
